# knn

./: .gitignore  LICENSE
Results/: resultsParallel1-0.txt  resultsParallel1-1-ring.txt  resultsParallel1-1.txt  resultsParallel2-0.txt  resultsParallel2-1.txt  resultsParallel2-2-ring.txt  resultsParallel2-2.txt  resultsSequential1-0.txt  resultsSequential2-0.txt  resultsSequential2-1.txt
Results/Fixed Points/: resultsParallel1-0.txt  resultsParallel2-0.txt  resultsParallel2-1.txt  resultsSequential1-0.txt  resultsSequential2-0.txt  resultsSequential2-1.txt
Results/Randomly Generated Points/: resultsParallel2-0.txt  resultsSequential1-0.txt  resultsSequential2-1.txt
parallel/: CMakeLists.txt  main.c  main_int.c
parallel v 2.0/: main.c
parallel-v1.0/: main.c  results.txt
parallel-v1.1/: main.c  run-fixed.sh  run.sh
parallel-v1.1-ring/: main.c  run-fixed.sh  run.sh
parallel-v2.0/: load.txt  main.c  run-fixed.sh  run.sh
parallel-v2.1/: main.c  min-distances.csv  neighbours.csv  points.csv  results.txt  run-fixed.sh  run.sh
parallel-v2.1.1/: main.c  run.sh
parallel-v2.1.1-ring/: main.c  run-fixed.sh  run.sh
parallel-v2.2/: main.c  run-fixed.sh
parallel-v2.2-ring/: main.c  run-fixed.sh
sequential/: CMakeLists.txt  main.c
sequential-v1.0/: main.c  results.txt  run-fixed.sh  run.sh
sequential-v2.0/: main.c  results.txt  run-fixed.sh  run.sh
sequential-v2.1/: main.c  run-fixed.sh  run.sh
